--- a/remeras.html
+++ b/remeras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=h1, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--letra-->
     <link rel="stylesheet" href="link rel="preconnect href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,56 +12,51 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="formato.css">
+    <link rel="stylesheet" href="tienda.css">
     <script src="https://kit.fontawesome.com/cb2fa70757.js" crossorigin="anonymous"></script>
-    <title>GitHub</title>
+    <title>Tienda</title>
 </head>
+
 <body>
     <section class="inicio">
+        <!--HEADER-->
+
         <header class="inicioHeader">
             <a href="#"><img class="logoheader" src= "img/hellraiserlogo.png"></a>
             <li><a class="menu" href="nosotros.html">Nosotros</a></li>
             <li><a class="menu" href="contactos.html">Contactos</a></li>
-            <li><a class="menu" href="tienda.html">Tienda</a></li>
             <li><a class="menu" href="locales.html">Locales</a></li>
+            <li><a class="menu" href="transformaciones.html">Inicio</a></li>
         </header>
+
+        <!--nav-->
 
         <nav class="audionav">
             <img src="img/hellraiser.jpg" width="200" height="200">
-            <audio controls autoplay src="hellraiser.mp3">
-            </audio>
+            <audio controls autoplay src="hellraiser.mp3"></audio>
         </nav>
 
-        <main class="contenido">
-            <span><h1>Hellraiser</h1></span>
-            <br>
-            <p>Busca ser una opcion para que, desde la comodidad de cualquier parte del pais, puedas adquirir nuestros productos.</p>
-            <br>
-            <span><h2>Productos</h2></span>
-            <div class="productosImg">
-                <div>
-                    <a href="remeras.html"><img src="img/remeras.jpg" width="200" height="200" class="bordes"></a>
-                    <a class="prueba" href="#">Remeras</a class="titulos">
-                </div>
-                <div>
-                    <a href="#"> <img src="img/buzos.jpg"   width="200" height="200" class="bordes"></a>
-                    <a class="prueba" href="#">Buzos</a class="titulos">
-                </div>
-                <div>
-                    <a href="#"><img src="img/mochilas.jpg" width="200" height="200"class="bordes"></a>
-                    <a class="prueba" href="#">Mochilas</a class="titulos">
-                </div>
-                <div>
-                    <a href="#"><img src="img/tatuajes.jpg" width="200" height="200"class="bordes"></a>
-                    <a class="prueba" href="#">Tatuajes</a class="titulos">
-                </div>
-                <div>
-                    <a href="#"><img src="img/piercing.jpg" width="200" height="200"class="bordes"></a>
-                    <a class="prueba" href="#">Piercing</a class="titulos">
-                </div>
+        <!--MAIN-->
+        <main>
+            <div class="efectoImagen">
+                <img src="img/almafuerte.png" width="200" height="200">
+                <img src="img/acdc.jpg" width="200" height="200">
+                <img src="img/pantera.jpg" width="200" height="200">
+                <img src="img/gorillaz.png" width="200" height="200">
+                <img src="img/guns.png" width="200" height="200">
+                <img src="img/mega.jpg" width="200" height="200">
+                <img src="img/metallica.png" width="200" height="200">
+                <img src="img/redhot.png" width="200" height="200">
+                <img src="img/renga.jpg" width="200" height="200">
+                <img src="img/ramones.png" width="200" height="200">
+                <img src="img/slipknot1.png" width="200" height="200">
+                <img src="img/misfits.jpg" width="200" height="200">
+                <img src="img/stone.jpg" width="200" height="200">
 
             </div>
         </main>
+
+
         <footer class="footerFormulario">
             <div>
                 <div>
@@ -126,8 +121,8 @@
             
             
     </footer>
-    <script src="https://kit.fontawesome.com/cb2fa70757.js" crossorigin="anonymous"></script>
+
+
 
     </section>
 </body>
-</html>
